--- a/.github/workflows/build-shared.yml
+++ b/.github/workflows/build-shared.yml
@@ -19,16 +19,24 @@ jobs:
         
         steps:
             - uses: actions/checkout@v4
+
+            - name: Install system dependencies (Ubuntu)
+              if: runner.os == 'Linux'
+              run: |
+                    sudo apt-get update
+                    sudo apt-get install -y libglib2.0-0 libgl1 libgomp1
+            
             - name: Setup Python
               uses: actions/setup-python@v4
               with:
                 python-version: '3.10'
+
             - name: Install dependencies
               run: |
                     python -m pip install --upgrade pip
                     pip install -r requirements.txt
+                    pip install -e .
             
             - name: Run tests
               run: |
-                    pip install pytest
                     pytest tests/
