--- a/.github/workflows/build-shared.yml
+++ b/.github/workflows/build-shared.yml
@@ -44,6 +44,7 @@ jobs:
             
             - name: Package application with PyInstaller
               run: |
+                    pip install pyinstaller
                     pyinstaller main.spec
             
             - name: Upload artifact (Linux)
