--- a/.github/workflows/build-shared.yml
+++ b/.github/workflows/build-shared.yml
@@ -45,21 +45,21 @@ jobs:
             - name: Package application with PyInstaller
               run: |
                     pip install pyinstaller
-                    pyinstaller main.py
+                    pyinstaller main.spec
             
             - name: Upload artifact (Linux)
               uses: actions/upload-artifact@v6
               if: runner.os == 'Linux'
               with:
                     name: EpiGimp-Linux
-                    path: dist/main/main
+                    path: dist/EpiGimp/EpiGimp
             
             - name: Upload artifact (Windows)
               uses: actions/upload-artifact@v6
               if: runner.os == 'Windows'
               with:
                     name: EpiGimp-Windows
-                    path: dist/main/main.exe
+                    path: dist/EpiGimp/EpiGimp.exe
             
             - name: Run tests
               if: false
